@@ -3,6 +3,6 @@ AUX adchpp-lan-2.9.0-fix_cflags.patch 2402 SHA256 c0b8b3c47fd2cc64b56f0b6c1c4e48
 AUX adchpp-lan.conf.d 328 SHA256 188b92162af1a305bcfd6e5d7a66c07fe9c35ee78c3787e43d4caf71b47bcc8d SHA512 35532da12c5b7fe04b5001dc769ff617d9857ea569610b4bff87271c2c9dbf49cdf89865777ee520734238c530e638475d69f0832d589e917c2e0f807d9b3fc2 WHIRLPOOL 5d77482388b916895c05f485f022a87175f3f53e2b2bcfcbf7609bc57d2722c7fd66ee4ed79c799d21df15bfa58405b21a31a93471456e0f24785145a3438dc7
 AUX adchpp-lan.init.d 521 SHA256 12a700093fe18c8c47f54c60ae445b344759d6b5eea37b553d4dc651611059ac SHA512 8ef6b4273259009d940e131440fa8ed4e7665671dad86f6a703cbf600ac7861353f2e97914ee22f884152195b15ebd7ef782000d2e0af500a418f624ca58eaa4 WHIRLPOOL 5a3a9f6bfcbb66736087c27735c7c304fa13aa2b59669e5e90afcec21bcbbad5ec0aaf2f7456a5f4ce5c0d89602d2c39e49a2b327950aec749422dddeb45e9f9
 AUX adchpp_runner.sh 185 SHA256 3fc062bea86aa313c20315a293c0164bf52fe272c0e46d0e2753cc29b5ca89cb SHA512 60eb17ed3c3d2244bbdf77e00a413a97da82cb2045e0761c7e86951ce31b7e8de7d3470fd420a0f2b09f0f0f46ab1125f49a1f289bc8cfcf49a7436fb79f1e3c WHIRLPOOL 04b60a57145ac8a8bb835a7bd2b23293fa913c78dbdcb93c070b8590188ee930a1cc4a8fe766cba21c50d42d680db359e0d4a051dd1ac7c9b84466b3db7c2503
-EBUILD adchpp-lan-9999.ebuild 3908 SHA256 177dad890cd42bb6543d767509283421d9a434e4051bb140ac796327e0b86667 SHA512 c870d1e4b113fad33c412700d1240d25579f0083bcd3b0d786e93fcd4b6a73e83ec5e9f4697ba5a7325feeea577daf9a97dc33fba9d985f5dd17b148220466f1 WHIRLPOOL 0a468d087fec9b774ca0e10f7088bf22016a218a22778f26712270341140bca4dd6af1c4973b7438470d7081074f3cc30cf9afed4ed1271bb979d93fb3859308
-MISC ChangeLog 468 SHA256 9119fb06e34b2f79b89dbf0b6d33a102166b8cd910f8b8d1df927d0ce7f5b4a8 SHA512 7ae590e6c858ede1a8b24abff19b62613107633f9e57a35953f5b3f3a0acf5e8e255f9c5cc3d7108664cc1239c9fe425f0d3e29ccd9673a8bf3ddd9f60f56690 WHIRLPOOL 2e933f48bdfcac2dc44af640d3226232dacb416c5d653900417d683c7bc4a8969441dfa1da59a6bb9947ebd253cb59ca21f9076df317eefeb699c111a533730c
-MISC metadata.xml 405 SHA256 ef9e1f94e77f332d0a4702f91e90b37afdcd1e5bb1c733657a57cd21c316dbfb SHA512 1c60707e7f054bd468148b6b9b4cc51b629d67bc43417829facb64ff2bc194d3e179a33fa663f5219acd9a27780ce0e4513ea0ab69be1fc4abe783b06cb2b2b8 WHIRLPOOL 0bdb7645f0cf922eccc41ef793b81571c5fdd97159260847db341691871c3114a29fb2fbf12d1b8b142841bcfd23507422f603f21615f3507de78ab2ea4fb28f
+EBUILD adchpp-lan-9999.ebuild 4105 SHA256 2acc9f680917ac138560178baba48407026ff1d2c826ccb78affa772eca0d77d SHA512 b789a2e3620d4a81d5cf8b988a966d9abfd9229f41990390793ca06839ee81774b3b4034eb63fbfa309f9b8f6f748bd2e6fcb250eb888b944660f8ce8aa959b4 WHIRLPOOL ed759333031c7c93ef4b6e8750399fe9b7361f2d36ce3f8ac8c5bcd7ab749afea4f8a0418f9edfeb1075010b1bce78820908c0cc0c9725b5878a0b9259ba9628
+MISC ChangeLog 601 SHA256 8d69860fd0194bac51f0a993b3fd82614dd7450a79fa6df966896de19a8b3c94 SHA512 141cb67ee48a76bf0da837abd5aabf9caa57f0e3b79ee3035e0cdf5935cbc5bcbb334236866f8e39ea0356676f2f4e1b0997c0d070e8020f1ff365ee0d5351d1 WHIRLPOOL c5c80f2f03fd061b3e3a5c1522ba16f0fc68cf94df70db07aad94aa470745c5fa5b37811703b14cd50016834d2006e69c51c75f67f7a923a32409e8f649e2afb
+MISC metadata.xml 510 SHA256 d10306334fef6d48c13150bb46bf7616ead511fb3bf4c0b7c61aec2a609df546 SHA512 7a05c172805bede1ae8347070eeb91f2d7f5ef9de4356ab5c10921b2d5093a7e1ac6e46abf70a65906e5ac8564aa563be0b9dd8f1d301628c979d889cb1e1aa9 WHIRLPOOL 70014ba4f884657d1d59f3828ea5564ff8e2ea5a42996c62b256a20147b8b71c8a56810f4c01422f358f5e432520793a9c4e0ca4b56796db11ee4e6661a1d21e
