@@ -2,6 +2,10 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  25 Feb 2013; Francisco Blas Izquierdo Riera (klondike)
+  adchpp-lan-9999.ebuild, metadata.xml:
+  Add support for using system lua
+
 *adchpp-lan-9999 (23 Feb 2013)
 
   23 Feb 2013; Francisco Blas Izquierdo Riera (klondike)
